--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
         </form>
     </div>
 </div>
-<!-- ErrorContainer für Anzeign der Fehler. EmptyTag <ul /> wird für Auflistung der Fehler benötigt-->
+
+<!-- ErrorContainer für Anzeigen der Fehler. EmptyTag <ul/> wird für Auflistung der Fehler benötigt-->
 <div id="errorContainer" >
     <p>Bitte korrigieren Sie die folgenden Fehler und versuchen Sie es erneut:</p>
-    <ul />
+    <ul/>
 </div>
 
 <div class="header text-center">
@@ -97,7 +98,6 @@
         <input type="date" id="departure-time" name="departureTime"   class="text-center">
         <input type="submit" value="Suchen">
     </form>
-
 </div>
 
 <div class="contentWrapper">
@@ -117,8 +117,10 @@
         <div id="map" style="z-index: 0" ></div>
     </div>
 </div>
+
 <div id="footer">
 </div>
+
 <script>
     //Validate Funktion für jQuery Validation
     $(function(){
@@ -239,6 +241,7 @@
         var element = document.getElementById('registrationOverlayWrapper');
         element.style.display = "none";
     }
+
     function openRegistrationDialog(){
         var element = document.getElementById('registrationOverlayWrapper');
         element.style.display = "block";
@@ -336,6 +339,7 @@
         }).addTo(mapObject);
     }
     initMap("map");
+
 </script>
 </body>
 </html>
